Fix alignment for product list page header

--- a/resources/assets/sass/_product-list.scss
+++ b/resources/assets/sass/_product-list.scss
@@ -1,3 +1,25 @@
+.category-list>.list-group .list-group-item:first-child {border-top-right-radius: 0;border-top-left-radius: 0;}
+.category-list>.list-group .list-group-item {border-width: 1px 0;}
+.category-list>.list-group {margin-bottom: 0;}
+.category-list .list-group-item {border-radius:0;}
+
+.category-list .list-group .list-group {margin: 0;margin-top: 10px;}
+.category-list .list-group-item li.list-group-item {margin: 0 -15px;border-top: 1px solid #ddd !important;border-bottom: 0;padding-left: 30px;}
+.category-list .list-group-item li.list-group-item:last-child {padding-bottom: 0;}
+
+.category-list div.list-group div.list-group{margin: 0;}
+.category-list div.list-group .list-group a.list-group-item {border-top: 1px solid #ddd !important;border-bottom: 0;padding-left: 30px;}
+.category-list .list-group-item li.list-group-item {border-top: 1px solid #DDD !important;}
+
+.page-header.product-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-header.product-list p {
+  align-self: flex-end;
+}
+
 .product-list img {
   height: 230px;
   margin: auto;
